modifiche per funzionamento tomcat